index, portfolio, biography

--- a/biography.html
+++ b/biography.html
@@ -203,12 +203,12 @@
                 <div class="rewievs_name">
                   <h4>Salavat Sherbakov</h4>
                 </div>
-                <div class="rewievs_text">
+                <p class="rewievs_text">
                   <span>National Artist of Russia, member of the Artistic</span> <span>and Expert Council within the Minister of Culture of the Russian Federation</span>
-                </div>
-                <div class="rewievs_text">
+                </p>
+                <p class="rewievs_text">
                   "Sculptor Andrey Sledkov worked in our creative team for a long time. He showed himself as a professional and literate artist. Andrey is an interesting and creative person. He has great prospects for development and work as a sculptor"
-                </div>
+                </p>
               </div>
             </div>
           </div>
@@ -304,8 +304,7 @@
     <link rel="stylesheet" href="css/changes.css">
 
     <script type="text/javascript" src="js/vendors.js"></script>
-    <!-- <script type="text/javascript" src="js/main.js"></script> -->
-    <script type="text/javascript" src="js/test.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
   </body>
 </html>
