--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                 <div class="avatar"><img src="temp/news_avatar.png" alt=""></div><a href="#">@Andrey_Sledkov</a>
               </div>
               <div class="date">July 16, 2018</div>
-              <div class="content">The anniversary sign “450 years to the city of Oryol” was established by decree of the Governor of the Oryol region Vadim Potomsky in honor of the 450th anniversary of the founding</div>
+              <div class="content">The anniversary sign “450 years to the city of Oryol” was established by decree of the Governor of the Oryol region Vadim Potomsky in honor of the 450th anniversary of the founding anniversary of the founding</div>
             </div>
           </div>
           <div class="item">
             <div class="item_inner">
               <div class="img_block">
                 <div class="img_item">
-                  <img src="temp/news_page.png" alt="">
+                  <img src="temp/A_sledcov-profile@2x.png" alt="">
                 </div>
               </div>
               <div class="news_autor">
@@ -182,10 +182,10 @@
             <div class="item_inner">
               <div class="img_block">
                 <div class="img_item owl-carousel">
-                  <img src="temp/news_page.png" alt="">
-                  <img src="temp/news_page.png" alt="">
-                  <img src="temp/news_page.png" alt="">
-                  <img src="temp/news_page.png" alt="">
+                  <img src="temp/ptPage3.png" alt="">
+                  <img src="temp/ptPage2.png" alt="">
+                  <img src="temp/ptPage1.png" alt="">
+                  <img src="temp/ptPage4.png" alt="">
                 </div>
               </div>
               <div class="news_autor">
@@ -199,7 +199,7 @@
             <div class="item_inner">
               <div class="img_block">
                 <div class="img_item">
-                  <img src="temp/news_page.png" alt="">
+                  <img src="temp/news-2@2x.png" alt="">
                 </div>
               </div>
               <div class="news_autor">
@@ -213,10 +213,10 @@
             <div class="item_inner">
               <div class="img_block">
                 <div class="img_item owl-carousel">
-                  <img src="temp/news_page.png" alt="">
-                  <img src="temp/news_page.png" alt="">
-                  <img src="temp/news_page.png" alt="">
-                  <img src="temp/news_page.png" alt="">
+                  <img src="temp/ptPage4.png" alt="">
+                  <img src="temp/ptPage2.png" alt="">
+                  <img src="temp/ptPage1.png" alt="">
+                  <img src="temp/ptPage3.png" alt="">
                 </div>
               </div>
               <div class="news_autor">
@@ -244,7 +244,7 @@
             <div class="item_inner">
               <div class="img_block">
                 <div class="img_item">
-                  <img src="temp/news_page.png" alt="">
+                  <img src="temp/ptPage2.png" alt="">
                 </div>
               </div>
               <div class="news_autor">
@@ -258,7 +258,7 @@
             <div class="item_inner">
               <div class="img_block">
                 <div class="img_item">
-                  <img src="temp/news_page.png" alt="">
+                  <img src="temp/ptPage4.png" alt="">
                 </div>
               </div>
               <div class="news_autor">
@@ -303,7 +303,6 @@
     <link rel="stylesheet" href="css/changes.css">
     <script type="text/javascript" src="js/vendors.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <!-- <script type="text/javascript" src="js/test.js"></script> -->
 
   </body>
 </html>
