--- a/portfolio_page.html
+++ b/portfolio_page.html
@@ -70,7 +70,11 @@
         <div class="img_block"><img src="temp/portfolio_page_section_one.png" alt=""></div>
         <div class="info_block">
           <div class="icon"><img src="img/main_potfolio_icon.png" alt=""></div>
-          <h3>Monument to the first Russian tsar, <br>Ivan the Terrible</h3>
+          <h3>Monument to the first Russian tsar,
+            <span>Ivan the Terrible</span>
+<!--             <br>Ivan the Terrible  -->
+            <span>Ivan</span>
+          </h3>
           <ul>
             <li><span>Sculptor:</span><strong>Andrey Sledkov</strong></li>
             <li><span>Author of idea (curator):</span><strong>Оleg Molchanov</strong></li>
@@ -94,6 +98,9 @@
         </div>
       </div>
     </section>
+
+
+
     <section class="portfolio_galery">
       <div class="title">photo galery</div>
       <div class="portfolio_container ">
@@ -103,6 +110,7 @@
               <img src="img/portfolio/item3.png" alt="" class="portfolio_img">
             </div>
           </div>
+
           <div class="portfolio_item ">
             <div class="porfolio_inner">
               <img src="img/portfolio/item3.png" alt="" class="portfolio_img">
@@ -122,6 +130,8 @@
         <div class="left"></div>
         <div class="right"></div>
       </div>
+
+      
     </section>
     <section class="map"><img src="temp/map.png" alt=""></section>
     <footer>
