--- a/biography.html
+++ b/biography.html
@@ -59,11 +59,6 @@
       </ul>
       <div class="close_menu_mobile">&#10006;</div>
     </div>
-
-
-
-
-
     <div class="second_header second_header_biography">
       <div class="second_header_black"></div>
       <div class="left"><a class="logo" href="#"><img src="img/logo.png" alt=""></a>
@@ -83,13 +78,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
     <div class="awards">
       <div class="title">Awards</div>
       <div class="news_container awards_container">
@@ -151,13 +139,6 @@
         <div class="right"></div>
       </div>
     </div>
-
-
-
-
-
-
-
     <div class="awards_info_section">
       <div class="item1">
         <div class="left"><img src="temp/awards_section1.png" alt=""></div>
@@ -183,12 +164,9 @@
         </div>
       </div>
     </div>
-
-
-
     <section class="rewievs">
 
-      <div class="title">rewievs</div>
+      <div class="title">reviews</div>
 
       <div class="rewievs_container ">
 
@@ -199,7 +177,7 @@
               <div class="img_block">
                 <img src="img/salavat.png" alt="" class="portfolio_img">
               </div>
-              <div class="rewievs_desc">
+              <div class="rewievs_desc ">
                 <div class="rewievs_name">
                   <h4>Salavat Sherbakov</h4>
                 </div>
@@ -248,26 +226,29 @@
               </div>
             </div>
           </div>
+          <div class="rewievs_item ">
+            <div class="rewievs_inner">
+              <div class="img_block">
+                <img src="img/salavat.png" alt="" class="portfolio_img">
+              </div>
+              <div class="rewievs_desc">
+                <div class="rewievs_name">
+                  <h4>Salavat Sherbakov</h4>
+                </div>
+                <div class="rewievs_text">
+                  National Artist of Russia, member of the Artistic and Expert Council within the Minister of Culture of the Russian Federation
+                </div>
+                <div class="rewievs_text">
+                  "Sculptor Andrey Sledkov worked in our creative team for a long time. He showed himself as a professional and literate artist. Andrey is an interesting and creative person. He has great prospects for development and work as a sculptor"
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
-
-
-
-
         <div class="left"></div>
         <div class="right"></div>
-
       </div>
-
     </section>
-
-
-
-
-
-
-
-
     <section class="map awards_map"><img src="temp/map.png" alt=""></section>
     <footer>
       <div class="menu_section">
@@ -292,19 +273,10 @@
           <button class="btn">Send</button>
         </form>
       </div>
-
-
-
-
     </footer>
     <div class="copyright">© 2019. Andrei Sledkov</div>
-
-
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/changes.css">
-
     <script type="text/javascript" src="js/vendors.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
   </body>
 </html>
