--- a/portfolio_page.html
+++ b/portfolio_page.html
@@ -59,7 +59,7 @@
       </ul>
       <div class="close_menu_mobile">&#10006;</div>
     </div>
-    <div class="second_header"><a class="logo" href="#"><img src="img/logo.png" alt=""></a>
+    <div class="second_header portfolio_page"><a class="logo" href="#"><img src="img/logo.png" alt=""></a>
       <div class="second_header_title"> 
         <h3>Ivan the Terrible</h3>
         <div class="breadcrumbs"><a href="#">Home</a><a href="#">Portfolio</a><span>Ivan the Terrible</span></div>
@@ -98,40 +98,35 @@
         </div>
       </div>
     </section>
-
-
-
     <section class="portfolio_galery">
       <div class="title">photo galery</div>
       <div class="portfolio_container ">
         <div class="slider owl-carousel" id="carousel_portfolio">
           <div class="portfolio_item ">
             <div class="porfolio_inner">
-              <img src="img/portfolio/item3.png" alt="" class="portfolio_img">
+              <img src="temp/news1.png" alt="" class="portfolio_img">
             </div>
           </div>
 
           <div class="portfolio_item ">
             <div class="porfolio_inner">
-              <img src="img/portfolio/item3.png" alt="" class="portfolio_img">
+              <img src="temp/awards_section1.png" alt="" class="portfolio_img">
             </div>
           </div>
           <div class="portfolio_item ">
             <div class="porfolio_inner">
-              <img src="img/portfolio/item3.png" alt="" class="portfolio_img">
+              <img src="temp/pt2.png" alt="" class="portfolio_img">
             </div>
           </div>
           <div class="portfolio_item ">
             <div class="porfolio_inner">
-              <img src="img/portfolio/item3.png" alt="" class="portfolio_img">
+              <img src="temp/pt3.png" alt="" class="portfolio_img">
             </div>
           </div>
         </div>
         <div class="left"></div>
         <div class="right"></div>
       </div>
-
-      
     </section>
     <section class="map"><img src="temp/map.png" alt=""></section>
     <footer>
@@ -160,12 +155,7 @@
     </footer>
     <div class="copyright">© 2019. Andrei Sledkov</div>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/changes.css">
-    <link rel="stylesheet" href="css/portfolio.css">
-
-
     <script type="text/javascript" src="js/vendors.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
   </body>
 </html>
