--- a/portfolio_page.html
+++ b/portfolio_page.html
@@ -59,7 +59,7 @@
       </ul>
       <div class="close_menu_mobile">&#10006;</div>
     </div>
-    <div class="second_header portfolio_page"><a class="logo" href="#"><img src="img/logo.png" alt=""></a>
+    <div class="second_header portfolio_header"><a class="logo" href="#"><img src="img/logo.png" alt=""></a>
       <div class="second_header_title"> 
         <h3>Ivan the Terrible</h3>
         <div class="breadcrumbs"><a href="#">Home</a><a href="#">Portfolio</a><span>Ivan the Terrible</span></div>
